--- a/package.json
+++ b/package.json
@@ -7,22 +7,30 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "ts-node server/server.ts"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.4",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
     "@angular/core": "~8.2.4",
     "@angular/forms": "~8.2.4",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@types/express": "^4.17.1",
     "@types/leaflet": "^1.5.1",
+    "@types/twit": "^2.2.22",
+    "express": "^4.17.1",
+    "hammerjs": "^2.0.8",
     "leaflet": "^1.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "twit": "^2.2.11",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -30,9 +38,9 @@
     "@angular/cli": "~8.3.2",
     "@angular/compiler-cli": "~8.2.4",
     "@angular/language-service": "~8.2.4",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -42,7 +50,7 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "^7.0.1",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   }
