デプロイ先変更

--- a/firebase.json
+++ b/firebase.json
@@ -4,6 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
+    "site": "tweet-map",
     "public": "dist/tweetmap",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
