--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "server": "ts-node server/server.ts"
+    "server": "ts-node server/server.ts",
+    "deploy": "firebase deploy --only hosting:tweet-map"
   },
   "private": true,
   "dependencies": {
