--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,7 @@ testem.log
 Thumbs.db
 
 # env
-/src/environments/environment.ts
-/src/environments/environment.prod.ts
+.env
 
 # firebase
 /.firebase
