--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.1",
     "@types/leaflet": "^1.5.1",
     "@types/twit": "^2.2.22",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.5.1",
