--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve --port 5501",
     "build": "ng build --prod",
     "test": "ng test",
+    "test:ci": "ng test -- --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "server": "ts-node server/server.ts",
