--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve --port 5501",
     "build": "ng build --prod",
+    "build:ios": "ng run tweetmap:build && npx cap add ios",
+    "open:ios": "npx cap open ios",
     "test": "ng test",
     "test:ci": "ng test -- --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
@@ -24,6 +26,9 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@capacitor/angular": "^1.0.0",
+    "@capacitor/core": "^1.3.0",
+    "@capacitor/ios": "^1.3.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.1",
     "@types/leaflet": "^1.5.1",
@@ -42,6 +47,7 @@
     "@angular/cli": "~8.3.2",
     "@angular/compiler-cli": "~8.2.4",
     "@angular/language-service": "~8.2.4",
+    "@capacitor/cli": "^1.3.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
