--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "ng": "ng",
     "start": "ng serve --port 5501",
     "build": "ng build --prod",
-    "build:ios": "ng run tweetmap:build && npx cap add ios",
-    "open:ios": "npx cap open ios",
+    "build:ios": "rm -rf ios && ng run tweetmap:build && cap add ios",
+    "open:ios": "cap open ios",
+    "build:android": "rm -rf android && ng run tweetmap:build && cap add android",
+    "open:android": "cap open android",
+    "build:electron": "rm -rf electron && ng run tweetmap:build && cap add electron",
+    "open:electtron": "cap open electron",
     "test": "ng test",
     "test:ci": "ng test -- --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
@@ -26,6 +30,7 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@capacitor/android": "^1.3.0",
     "@capacitor/angular": "^1.0.0",
     "@capacitor/core": "^1.3.0",
     "@capacitor/ios": "^1.3.0",
