--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
     "@capacitor/ios": "^1.3.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/express-ws": "^3.0.0",
     "@types/leaflet": "^1.5.1",
     "@types/twit": "^2.2.23",
+    "@types/ws": "^6.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-ws": "^4.0.0",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.5.1",
-    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "twit": "^2.2.11",
     "zone.js": "~0.9.1"
