--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --port 5501",
     "build": "ng build --prod",
+    "build:aot": "ng build --aot",
     "build:ios": "rm -rf ios && ng run tweetmap:build && cap add ios",
     "open:ios": "cap open ios",
     "build:android": "rm -rf android && ng run tweetmap:build && cap add android",
